syntax = "proto3";
package com.capgemini.perf.shared;

option java_multiple_files = true;
option java_package = "com.capgemini.perf.shared.proto";


message Empty {}

message CustomerRequest {
  int32 id = 1;
}

// The response message containing the customer
message CustomerResponse {
  string id = 1;
  int32 userId = 2;
  string ref = 3;
  string name = 4;
}

message CustomersResponse {
  repeated CustomerResponse customers = 1;
}

service CustomerService {
  rpc all (Empty) returns (CustomersResponse);
  rpc find (CustomerRequest) returns (CustomerResponse);
}